# driftwave-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_SPEC.md  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: README.md
configs/: assets.yaml  dataset.yaml  dataset_tiny.yaml  solver.yaml  solver_tiny.yaml  train_fno.yaml  train_fno_tiny.yaml  train_pinn.yaml  train_unet.yaml  train_unet_tiny.yaml
docs/: README.md  data_pipeline.md  fno_model.md  hw_equations.md
outputs/: hw_tiny.npz
scripts/: benchmark.py  generate_dataset.py  make_readme_assets.py  rollout_demo.py  run_solver.py  train.py
src/driftwave_lab/: __init__.py
src/driftwave_lab/data/: __init__.py  dataset.py  generator.py  io.py
src/driftwave_lab/evaluation/: __init__.py  benchmark.py  metrics.py  rollout.py  spectra.py
src/driftwave_lab/models/: __init__.py  fno2d.py  pinn_inverse.py  unet.py
src/driftwave_lab/solver/: __init__.py  diagnostics.py  hw.py  initial_conditions.py  spectral.py
src/driftwave_lab/training/: __init__.py  train_baseline.py  train_fno.py  train_pinn.py
src/driftwave_lab/utils/: __init__.py  config.py
src/driftwave_lab/viz/: __init__.py  gifs.py  plots.py  readme_assets.py
tests/: test_dataset.py  test_diagnostics.py  test_generator.py  test_ml_pipeline.py  test_smoke.py  test_solver.py  test_spectral.py  test_viz.py
