[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "driftwave-lab"
version = "0.1.0"
description = "2D drift-wave plasma turbulence lab: Hasegawa–Wakatani solvers, ML surrogates, and inverse SciML."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "David Gisbert Ortiz" }]
keywords = [
    "plasma",
    "turbulence",
    "drift-wave",
    "hasegawa-wakatani",
    "scientific-ml",
    "neural-operator",
    "surrogate",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8",
    "pytest-cov>=5",
]
ml = [
    "torch>=2.0",
]

[project.urls]
Repository = "https://github.com/davidgisbertortiz-arch/driftwave-lab"
Documentation = "https://github.com/davidgisbertortiz-arch/driftwave-lab#readme"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length is handled by the formatter
    "RUF002", # scientific Unicode in docstrings is intentional
    "RUF003", # scientific Unicode in comments is intentional
]

[tool.ruff.lint.per-file-ignores]
"src/driftwave_lab/solver/spectral.py" = ["I001"]
"src/driftwave_lab/evaluation/metrics.py" = ["I001"]
"src/driftwave_lab/models/fno2d.py" = ["I001"]
"src/driftwave_lab/models/unet.py" = ["I001"]
"src/driftwave_lab/training/train_fno.py" = ["I001"]
"tests/test_generator.py" = ["I001"]

[tool.ruff.lint.isort]
known-first-party = ["driftwave_lab"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
